public class Controller {

    private board board;
    private vacuumCleaner vacuumCleaner;

    private RandomMovement randomMovement;

    int moveUp;
    int moveDown;
    int moveLeft;
    int moveRight;
    int moveUpRight;
    int moveUpLeft;
    int moveDownRight;
    int moveDownLeft;
    String switchmovement;

		boolean checkmovementboolean;

        public void detectnobattery(){
            battery = 100;


    }
    public void  detectallclean(){

    }
    public void  getDirection(){

    }
    public void changemovement(){

    }
}
