public interface Tiles {


    public boolean vacuum = true;
    public boolean cat = true;
    public boolean wall = true;
    public  boolean dirtyzone = true;
    public  boolean furniture = true;

}
