public abstract class sofa extends entityNoMovement{

    public sofa(int id, int[] coordinates, String skin) {
        super(id, coordinates, skin);
    }
    
}
